--- a/views/article.ejs
+++ b/views/article.ejs
@@ -21,7 +21,7 @@
             <p><%= article.content %></p>
           <% } else { %>
             <div class="article-login">
-              <p>今すぐログインしよう！</p>
+              <p>今すぐログインしれくれよな！</p>
               <p>記事の続きは<br>ログインすると読むことができます</p>
               <img src="/images/BLOGlogo.png">
               <a class="btn" href="/login">ログイン</a>
